V 
* features
- autoload configurations
- Profile switch log
* bug fixes
-

V 2.1.2
* features
- basic help page for configurations
* bug fixes
- some devices seem the need the vibrate permission .oO(strange...)
- prevent errors while switching profiles

V 2.1.1
* features
- 
* bug fixes
- disable debug mode

V 2.1.0
* features
- configurations: backup/restore
- switch airplane mode (the ultimate battery saver - wait for 2.2 then it will make more sense)
* bug fixes
-

V 2.0.7
* features
- 
* bug fixes
- fix force close

V 2.0.6
* features
- 
* bug fixes
- fix forceclose

V 2.0.5
* features
- fix capability check to honor thresholds
- capability check: help page and remove e-mail address 
- help pages for settings
* bug fixes
-

V 2.0.4
* features
- Show battery info when clicking on power information (hidden feature)
* bug fixes
- fix force close

V 2.0.3
* features
- GUI cleanup
- colorise current virtual governor
* bug fixes
- fix wrong virtual governor bug

V 2.0.2
* features
- context sensitive help
- help update 
- manage back button in help
* bug fixes
-

V 2.0.1
* features
- 
* bug fixes
- fix fc on orientation change

V 2.0.0
* features
- Virtual governors
- GUI updates
- Settings and help moved to menu
- Statistics tab
- allow frequencies < 400 for minimal frequency
- use powersave_bias 
* bug fixes
-

V 1.6.1
* features
- Greek translation
- 
* bug fixes
- 

V 1.6.3
* features
- 
* bug fixes
- fix forceclose
- fix read battery current
 
V 1.6.2
* features
- French translation
- allow min equal max frequency
- switch reporting to mailing list cputuner-help@lists.sourceforge.net
* bug fixes
- fix switching language internally

V 1.6.1
* features
- Settings option: Pulse mobiledata on connected wifi (default: true)
- Greek translation
- report android release
* bug fixes
-
 
V 1.6.0
* features
- Avoid some system calls by handling sanity checks internally 
- Choose app language
- force internal installation otherwise boot start will not work